k3s-aws/manifests/registry_ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: docker-registry-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: docker.carpie.net
    http:
      paths:
      - backend:
          serviceName: docker-registry-service
          servicePort: 5000
  tls:
  - hosts:
    - docker.carpie.net
    secretName: docker-carpie-net-tls
